--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "drag-and-drop-files": "0.0.1",
     "electron-prebuilt": "1.1.3",
     "hyperdrive": "^7.1.1",
-    "hyperdrive-archive-swarm": "^4.0.0"
+    "hyperdrive-archive-swarm": "^4.0.0",
+    "memdb": "^1.3.1",
+    "random-access-file": "^1.3.0"
   },
   "devDependencies": {},
   "scripts": {
