--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "hyperdrive": "^7.1.1",
     "hyperdrive-archive-swarm": "^4.0.0",
     "memdb": "^1.3.1",
-    "random-access-file": "^1.3.0"
+    "random-access-file": "^1.3.0",
+    "speedometer": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
